@@ -2,7 +2,7 @@ sg3-utils (1.28-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Doug Gilbert <dgilbert@interlog.com>  Sat, 30 May 2009 19:00:00 -0400
+ -- Doug Gilbert <dgilbert@interlog.com>  Sun, 07 Jun 2009 16:00:00 -0400
 
 sg3-utils (1.27-0.1) unstable; urgency=low
 
